# android_system_core

./: 0001-adb-Fix-stale-USB-transport-entry-during-quick-conn.patch  Makefile  Makefile.am  configure.ac  start_usb  target.mk
adb/: Android.mk  Makefile.am  Makefile.win  adb.c  adb.h  adb.mk  adb_auth_client.c  commandline.c  commandline.cpp  framebuffer_service.c  get_my_path_windows.c  remount_service.c  services.c  services.cpp  start_adbd  sysdeps.h  transport.c  transport_local.c  transport_usb.c  usb_linux_client.c  usb_osx.c  usb_vendors.c  usb_windows.c  utils.c
adb/daemon/: main.cpp
charger/: charger.c
debian/: changelog  control  libcutils-dev.install  libcutils.install  liblog-dev.install  liblog.install  rules
debuggerd/: Android.mk  dalvik.h  debuggerd.c  debuggerd.h  tombstone.c  tombstone.cpp
debuggerd/arm/: machine.c
factory_reset/: Android.mk  factory_reset.c
fastboot/: Android.mk  Makefile.am  Makefile.win  bootimg.c  usb_linux.c
fastbootd/: usb_linux_client.c
fs_mgr/: Makefile.am  fs_mgr.c  fs_mgr.cpp  fs_mgr_priv.h  fs_mgr_verity.c
fs_mgr/include/: fs_mgr.h
gpttool/: Android.mk
healthd/: Android.mk  BatteryMonitor.cpp  healthd.cpp  healthd_board_default.cpp  healthd_mode_charger.cpp  healthd_msm_alarm.cpp
include/arch/linux-arm/: OEConfig.h
include/cutils/: ashmem.h  fdevent.h  klog.h  list.h  log.h  logprint.h  properties.h
include/mincrypt/: rsa.h  sha.h
include/netutils/: ifc.h
include/pixelflinger/: format.h
include/private/: android_filesystem_config.h
include/system/: audio.h  audio_policy.h  camera.h  gestures.h  graphics.h  window.h
include/testframework/: TestFramework.h
init/: Android.mk  builtins.c  builtins.cpp  devices.c  devices.cpp  init.c  init.cpp  init.h  init_first_stage.cpp  init_parser.c  keywords.h  msm8228.prop  parser.c  property_service.c  property_service.cpp  readme.txt  ueventd.c  util.c  util.cpp
libcutils/: Makefile.am  android_reboot.c  ashmem-dev.c  fdevent.c  klog.c  libcutils.mk  memory.c  mq.c  mspace.c  socket_loopback_server.c
liblog/: Makefile.am  logd_write.c  logprint.c
libmincrypt/: Makefile  Makefile.am  rsa.c  sha.c
libnetutils/: dhcp_utils.c  dhcpclient.c  ifc_utils.c  ifc_utils.h
libnl_2/: Android.mk
libpixelflinger/: format.cpp  t32cb16blend.S
libpixelflinger/tinyutils/: SharedBuffer.cpp
libprocessgroup/: Android.mk
libsparse/: Makefile.am  configure.ac  output_file.c
libsuspend/: autosuspend.c
libsysutils/src/: NetlinkEvent.cpp  SocketClient.cpp
libzipfile/: Android.mk  Makefile.am
logcat/: Android.mk  Makefile.am  event-log-tags  logcat.cpp
logd/: Android.mk
mkbootimg/: Android.mk  Makefile  Makefile.am  mkbootimg.c
mountd/: Android.mk  AutoMount.c
powerapp/: Makefile.am  powerapp.c  reboot  reset_reboot_cookie  start_power_config
rootdir/: Android.mk  init.environ.rc.in  init.rc  init.usb.rc  ueventd.rc
rootdir/etc/: hcidump.sh  hosts  init.goldfish.rc  init.qcom.bt.sh  init.qcom.class_core.sh  init.qcom.class_main.sh  init.qcom.coex.sh  init.qcom.early_boot.sh  init.qcom.fm.sh  init.qcom.post_boot.sh  init.qcom.rc  init.qcom.sdio.sh  init.qcom.sh  init.qcom.syspart_fixup.sh  init.qcom.usb.rc  init.qcom.usb.sh  init.qcom.wifi.sh  vold.conf  vold.qcom.conf
rootdir/etc/msm7627_surf/: vold.qcom.conf
rootdir/etc/msm7630_surf/: vold.qcom.conf
rootdir/etc/msm8660_surf/: vold.qcom.conf
rootdir/etc/qsd8250_ffa/: vold.qcom.conf
rootdir/etc/qsd8650a_st1x/: vold.qcom.conf
run-as/: run-as.c
sdcard/: Android.mk  sdcard.c
testframework/: Android.mk  TestFramework.cpp  TestFramework.h  TestFrameworkApi.cpp  TestFrameworkCommon.cpp  TestFrameworkCommon.h  TestFrameworkHash.cpp  TestFrameworkService.cpp  TestFrameworkService.h  TestFrameworkServiceMain.cpp
toolbox/: Android.mk  chmod.c  chown.c  getenforce.c  log.c  ls.c  mount.c  reboot.c  toolbox.mk  top.c  umount.c  vmstat.c
ueventd/: Makefile.am  devices.c  devices.h  log.h  ueventd.c  ueventd.h  util.c  util.h
usb/: Makefile.am  boot_composition  boot_hsic  boot_hsusb  cdrom_install.iso  start_usb  target  usb_composition  usb_composition_switch.c
usb/compositions/: 9002  900A  901C  901D  901F  9021  9022  9024  9025  9025_IPA  9026  902A  902B  902C  902D  902E  9043  9046  9047  9049  904A  9056  9057  9058  9059  905A  905B  9060  9063  9064  9067  9083  9084  9085  9091  90A1  90A9  90AD  90B1  90B9  (+1 more)
usb/debuger/: usb_debug
vold/: blkdev.c  cmd_dispatch.c  cmd_dispatch.h  media.h  mmc.c  uevent.c  ums.c  vold.c  vold.h  volmgr.c  volmgr.h  volmgr_ext3.c  volmgr_ext3.h  volmgr_vfat.c  volmgr_vfat.h
